--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
                         <label for="password">Password</label>
                     </div>
                     <div class="text-end" style="padding: 2px;">
-                        <button type="submit" class="btn btn-primary"><a href="/index.html" style="color: aliceblue;">Login</a></button>
+                        <button type="submit" class="btn btn-primary"><a href="index.html" style="color: aliceblue;">Login</a></button>
                     </div>
                 </div>
             </form>
