--- a/buku_tamu.html
+++ b/buku_tamu.html
@@ -23,13 +23,13 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="=/index.html">Home</a>
-                    <a class="nav-link" href="=/tamu.php">Tamu</a>
+                    <a class="nav-link" href="=index.html">Home</a>
+                    <a class="nav-link" href="=tamu.php">Tamu</a>
                     <a class="nav-link active" href="#">Buku Tamu</a>
                 </div>
             </div>
             <span class="d-flex">
-            <a class="btn btn-danger" href="=/login.html">Logout</a>
+            <a class="btn btn-danger" href="=login.html">Logout</a>
             </span>
         </div>
     </nav>
@@ -40,7 +40,7 @@
             <div class="card-header text-center">
                 <h3>Buku tamu</h3>
             </div>
-            <form action="/form.php" method="post">
+            <form action="form.php" method="post">
                 <div class="card-body">
                     <div class="form-floating">
                         <input type="text" name="username" id="username" class="form-control" placeholder="Nama Tamu">
